Refactor la estructura del encabezado y mejorar estilos responsivos en CSS

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 
 <body>
+    <header class="header">
+        <img src="/ICACIT_2025.jpg" alt="logo icacit">
+        <h1>Criterios del Programa para Pregrado 2026</h1>        
+    </header>    
+
     <main class="container">
-        <div class="header">
-            <img src="/ICACIT_2025.jpg" alt="logo icacit">
-            <h1>Criterios del Programa para Pregrado 2026</h1>
-        </div>
         <div class="container_links">
             <h2>Tabla de Contenido</h2>
             <ul>
@@ -79,29 +80,41 @@
                 </li>
                 <li type="A"><a href="#progTecnologia">Para Programas de Tecnología en Ingeniería</a>
                     <ul>
-                        <li type="1"><a href="#tecnologiaAeroespacial">Tecnología en Ingeniería Aeroespacial, Aeronáutica</a></li>
-                        <li type="1"><a href="#tecnologiaAireAcondicionado">Tecnología en Ingeniería del Aire Acondicionado, de Refrigeración, de
+                        <li type="1"><a href="#tecnologiaAeroespacial">Tecnología en Ingeniería Aeroespacial,
+                                Aeronáutica</a></li>
+                        <li type="1"><a href="#tecnologiaAireAcondicionado">Tecnología en Ingeniería del Aire
+                                Acondicionado, de Refrigeración, de
                                 Calefacción, de Ventilación</a></li>
                         <li type="1"><a href="#tecnologiaAmbiental">Tecnología en Ingeniería Ambiental</a></li>
-                        <li type="1"><a href="#tecnologiaArquitectonica">Tecnología en Ingeniería Arquitectónica</a></li>
+                        <li type="1"><a href="#tecnologiaArquitectonica">Tecnología en Ingeniería Arquitectónica</a>
+                        </li>
                         <li type="1"><a href="#tecnologiaAutomotriz">Tecnología en Ingeniería Automotriz</a></li>
                         <li type="1"><a href="#tecnologiaCivil">Tecnología en Ingeniería Civil</a></li>
                         <li type="1"><a href="#tecnologiaComputadores">Tecnología en Ingeniería de Computadores</a></li>
-                        <li type="1"><a href="#tecnologiaSistemas">Tecnología en Ingeniería de Sistemas de Instrumentación y Control</a>
+                        <li type="1"><a href="#tecnologiaSistemas">Tecnología en Ingeniería de Sistemas de
+                                Instrumentación y Control</a>
                         </li>
-                        <li type="1"><a href="#tecnologiaConstruccion">Tecnología en Ingeniería de la Construcción</a></li>
-                        <li type="1"><a href="#tecnologiaInformacion">Tecnología en Ingeniería de la Información, de Seguridad de la
+                        <li type="1"><a href="#tecnologiaConstruccion">Tecnología en Ingeniería de la Construcción</a>
+                        </li>
+                        <li type="1"><a href="#tecnologiaInformacion">Tecnología en Ingeniería de la Información, de
+                                Seguridad de la
                                 Información, de Ciberseguridad, Garantía de la Información</a></li>
-                        <li type="1"><a href="#tecnologiaProteccionIncendios">Tecnología en Ingeniería de Protección contra Incendios</a></li>
-                        <li type="1"><a href="#tecnologiaTelecomunicaciones">Tecnología en Ingeniería de Telecomunicaciones</a></li>
-                        <li type="1"><a href="#tecnologiaElectronica">Tecnología en Ingeniería Eléctrica, Electrónica</a></li>
-                        <li type="1"><a href="#tecnologiaElectromecanica">Tecnología en Ingeniería Electromecánica</a></li>
+                        <li type="1"><a href="#tecnologiaProteccionIncendios">Tecnología en Ingeniería de Protección
+                                contra Incendios</a></li>
+                        <li type="1"><a href="#tecnologiaTelecomunicaciones">Tecnología en Ingeniería de
+                                Telecomunicaciones</a></li>
+                        <li type="1"><a href="#tecnologiaElectronica">Tecnología en Ingeniería Eléctrica,
+                                Electrónica</a></li>
+                        <li type="1"><a href="#tecnologiaElectromecanica">Tecnología en Ingeniería Electromecánica</a>
+                        </li>
                         <li type="1"><a href="#tecnologiaIndustrial">Tecnología en Ingeniería Industrial</a></li>
                         <li type="1"><a href="#tecnologiaMecanica">Tecnología en Ingeniería Mecánica</a></li>
                         <li type="1"><a href="#tecnologiaNaval">Tecnología en Ingeniería Naval</a></li>
-                        <li type="1"><a href="#tecnologiaProcesos">Tecnología en Ingeniería de Procesos Químicos, de Procesos de
+                        <li type="1"><a href="#tecnologiaProcesos">Tecnología en Ingeniería de Procesos Químicos, de
+                                Procesos de
                                 Refinería</a></li>
-                        <li type="1"><a href="#tecnologiaTopografica">Tecnología en Ingeniería Topográfica, Geomática</a></li>
+                        <li type="1"><a href="#tecnologiaTopografica">Tecnología en Ingeniería Topográfica,
+                                Geomática</a></li>
                     </ul>
                 </li>
             </ul>
@@ -477,6 +490,7 @@
                             <p>
                                 El programa debe permitir que los estudiantes logren, al momento de la graduación, cada
                                 uno de los siguientes atributos del graduado:
+                            </p>
                             <ul>
                                 <li>
                                     [AG-C13] Usa enfoques sistémicos para seleccionar, desarrollar, aplica, integrar y
@@ -484,7 +498,6 @@
                                     usuario.
                                 </li>
                             </ul>
-                            </p>
                             <h4>Plan de Estudios</h4>
                             <p>
                                 El plan de estudios debe incluir tópicos de tecnologías de información incluyendo: (1)
