--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Criterios del Programa para Pregrado 20265</title>
     <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=arrow_upward" />
 </head>
 
 <body>
     <header class="header">
         <img src="/ICACIT_2025.jpg" alt="logo icacit">
-        <h1>Criterios del Programa para Pregrado 2026</h1>        
-    </header>    
+        <h1>Criterios del Programa para Pregrado 2026</h1>
+    </header>
 
     <main class="container">
         <div class="container_links">
@@ -2517,6 +2518,29 @@
             </section>
         </section>
     </main>
+
+    <!-- btn que permite subir a la parte superior de la pagina -->
+    <button id="btn-subir" onclick="subirAlInicio()">
+        <span class="material-symbols-outlined">
+            arrow_upward
+        </span>
+    </button>
+
+    <script>
+        window.onscroll = function () {
+            var boton = document.getElementById("btn-subir");
+            if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
+                boton.style.display = "block";
+            } else {
+                boton.style.display = "none";
+            }
+        };
+
+        function subirAlInicio() {
+            window.scrollTo({ top: 0, behavior: "smooth" });
+        }
+    </script>
+
 </body>
 
 </html>
